<resources>
    <string name="app_name">Everyday Alarm Clock</string>
    <string name="name_infographics">Usage History</string>
    <string name="name_settings">Settings</string>
    <string name="name_guide">Guide</string>
    <string name="name_about">About</string>
    <string name="name_contact">Contact Us</string>
    <string name="save_alarm">Save</string>
    <string name="name_alarm">Alarm Name</string>


    <string name="accept">By using this application , agree to Everyday Alarm Clock app\'s <font color='#FF4081'>Terms and Privacy Policy</font> </string>
    <string name="banner_ad_unit_id">ca-app-pub-7437967459659576/1279988448</string>
    <string name="banner_ad_unit_id2">ca-app-pub-7437967459659576/4967365249</string>
    <string name="banner_ad_unit_id3">ca-app-pub-7437967459659576/4827764449</string>
    <string name="banner_ad_unit_id4">ca-app-pub-7437967459659576/6304497646</string>
    <string name="testad">ca-app-pub-3940256099942544/6300978111</string>



    <string name="eula">By downloading any application from or by  <b>P ARAVINDRAJ</b> (Developer of this Application)  (here after referered to as “The Developer”), installing or using this \'Everyday Alarm Clock\' android application or any portion thereof (“Application”), you agree to the following terms and conditions (the “Terms and Conditions”).\n\n

<b>1. USE OF APPLICATION</b>\n
a. The Developer grants you the non-exclusive, non-transferable, limited right and license to install and use this Application solely and exclusively for your personal use.\n
b. You may not use the Application in any manner that could damage, disable, overburden, or impair the Application (or servers or networks connected to the Application), nor may you use the Application in any manner that could interfere with any other party’s use and enjoyment of the Application (or servers or networks connected to the Application).\n
c. You agree that you are solely responsible for (and that The Developer has no responsibility to you or to any third party for) your use of the Application, any breach of your obligations under the Terms and Conditions, and for the consequences (including any loss or damage which The Company or The Developer  may suffer) of any such breach.\n\n

<b>2. PROPRIETARY RIGHTS</b>\n
You acknowledge that (a) the Application contains proprietary and confidential information that is protected by applicable intellectual property and other laws, and (b) The Developer and/or third parties own all right, title and interest in and to the Application and content, excluding content provided by you, that may be presented or accessed through the Application, including without limitation all Intellectual Property Rights therein and thereto. “Intellectual Property Rights” means any and all rights existing from time to time under patent law, copyright law, trade secret law, trademark law, unfair competition law, and any and all other proprietary rights, and any and all applications, renewals, extensions and restorations thereof, now or hereafter in force and effect worldwide. You agree that you will not, and will not allow any third party to, (i) copy, sell, license, distribute, transfer, modify, adapt, translate, prepare derivative works from, decompile, reverse engineer, disassemble or otherwise attempt to derive source code from the Application or content that may be presented or accessed through the Application for any purpose, unless otherwise permitted, (ii) take any action to circumvent or defeat the security or content usage rules provided, deployed or enforced by any functionality (including without limitation digital rights management functionality) contained in the Application, (iii) use the Application to access, copy, transfer, transcode or retransmit content in violation of any law or third party rights, or (iv) remove, obscure, or alter The Developer\'s or any third party\'s copyright notices, trademarks, or other proprietary rights notices affixed to or contained within or accessed in conjunction with or through the Application.\n\n


<b>3. TERMINATION</b>\n
These Terms and Conditions will continue to apply until terminated by either you or The Company as set forth below. You may terminate these Terms and Conditions at any time by permanently deleting the Application from your mobile device in its entirety. Your rights automatically and immediately terminate without notice from The Developer or any Third Party if you fail to comply with any provision of these Terms and Conditions. In such event, you must immediately delete the Application.\n\n

<b>4. INDEMNITY</b>\n
To the maximum extent permitted by law, you agree to defend, indemnify and hold harmless The Developer , its affiliates and their respective directors, officers, employees and agents from and against any and all claims, actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses (including reasonable attorneys fees) arising out of or accruing from your use of the Application, including your downloading, installation, or use of the Application, or your violation of these Terms and Conditions.\n\n

<b>5. DISCLAIMER OF WARRANTIES</b>\n
a. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR USE OF THE APPLICATION IS AT YOUR SOLE DISCRETION AND RISK AND THAT THE APPLICATION IS PROVIDED AS IS AND AS AVAILABLE WITHOUT WARRANTY OF ANY KIND.\n
b. YOU ARE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR MOBILE DEVICE, OR OTHER DEVICE, OR LOSS OF DATA THAT RESULTS FROM SUCH USE.\n
c. THE DEVELOPER FURTHER EXPRESSLY DISCLAIMS ALL WARRANTIES AND CONDITIONS OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO THE IMPLIED WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT, WITH RESPECT TO THE APPLICATION.\n
d. THE APPLICATION IS NOT INTENDED FOR USE IN THE OPERATION OF NUCLEAR FACILITIES, LIFE SUPPORT SYSTEMS, EMERGENCY COMMUNICATIONS, AIRCRAFT NAVIGATION OR COMMUNICATION SYSTEMS, AIR TRAFFIC CONTROL SYSTEMS, OR ANY OTHER ACTIVITIES IN WHICH THE FAILURE OF THE APPLICATION COULD LEAD TO DEATH, PERSONAL INJURY, OR SEVERE PHYSICAL OR ENVIRONMENTAL DAMAGE.\n\n

<b>6. LIMITATION OF LIABILITY</b>\n
YOU EXPRESSLY UNDERSTAND AND AGREE THAT THE DEVELOPER, ITS SUBSIDIARIES AND AFFILIATES, AND ITS LICENSORS ARE NOT LIABLE TO YOU UNDER ANY THEORY OF LIABILITY FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL CONSEQUENTIAL OR EXEMPLARY DAMAGES THAT MAY BE INCURRED BY YOU THROUGH YOUR USE OF THE APPLICATION, INCLUDING ANY LOSS OF DATA OR DAMAGE TO YOUR MOBILE DEVICE, WHETHER OR NOT THE DEVELOPER OR ITS REPRESENTATIVES HAVE BEEN ADVISED OF OR SHOULD HAVE BEEN AWARE OF THE POSSIBILITY OF ANY SUCH LOSSES ARISING.\n\n



<b>7. MISCELLANEOUS</b>\n
a. These Terms and Conditions constitute the entire Agreement between you and The Developer relating to the Application and govern your use of the Application, and completely replace any prior or contemporaneous agreements between you and The Developer regarding the Application.\n
b. The failure of The Developer to exercise or enforce any right or provision of these Terms and Conditions does not constitute a waiver of such right or provision, which will still be available to The Developer .\n
c. If any court of law, having the jurisdiction to decide on this matter, rules that any provision of these Terms and Conditions is invalid, then that provision will be removed from the Terms and Conditions without affecting the rest of the Terms and Conditions. The remaining provisions of these Terms and Conditions will continue to be valid and enforceable.\n
d. The rights granted in these Terms and Conditions may not be assigned or transferred by either you or The Developer without the prior written approval of the other party. Neither you nor The Developer are permitted to delegate their responsibilities or obligations under these Terms and Conditions without the prior written approval of the other party.\n
</string>
</resources>
