<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_infographics"
            android:checked="false"
            android:icon="@drawable/ic_action_infographics"
            android:title="@string/name_infographics" />
</group>
    <group android:id="@+id/grp2" android:checkableBehavior="single" >

    <item
            android:id="@+id/menu_settings"
            android:checked="false"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/name_settings" />
</group>

    <group android:id="@+id/grp6" android:checkableBehavior="single" >

    <item
            android:id="@+id/menu_about"
            android:checked="false"
            android:icon="@drawable/ic_action_about"
            android:title="@string/name_about" />
</group>

</menu>